Revision history for Twitter::API

{{$NEXT}}

0.0108  2016-12-12 10:53:34 PST
  - make Migration trait optional
  - use WWW::Form::UrlEncoded::PP in tests to avoid a fall back warning

0.0107  2016-12-11 06:37:10 PST
  - moved and renamed API endpoint helper methods into
    Twitter::API::Role::RequestArgs for other implementers

0.0106  2016-12-10 17:31:25 PST
  - improved tests and fixes for oauth management methods
  - renamed s/Transition/Migration
  - fixed some POD links

0.0105  2016-12-09 22:16:05 PST
  - alpha release
  - updated examples for changes semantics in 0.0104
  - added example/oauth_webapp.psgi
  - dependecy diet: replaced Net::OAuth with WWW::OAuth

0.0104  2016-12-08 15:10:34 PST (TRIAL RELEASE)
  - added Net::Twitter/::Lite migration support
  - renamed methods that exist in Net::Twitter with different semantics,
    primarily OAuth management methods
  - more documentation and tests

0.0103  2016-12-06 07:43:10 PST (TRIAL RELEASE)
  - fixed: RetryOnError failed to load
  - upload_media accepts positional params media or media_data

0.0102  2016-12-05 08:44:19 PST (TRIAL RELEASE)
  - fix invalidate_token
  - more documentation
  - reworked Twitter::API::Utils - timestamp methods now return time (epoch
    seconds), gmtime, and localtime, respectively

0.0101  2016-12-03 20:13:21 PST (TRIAL RELEASE)
  - documented trait ApiMethods
  - fixed broken ApiMethods methods and the test that wasn't catching them

0.0100  2016-12-02 13:32:27 PST (TRIAL RELEASE)
  - initial release