@@ -1,6 +1,7 @@
 Revision history for Twitter::API
 
 {{$NEXT}}
+  - Added Twitter API error code 215 to is_token_error
 
 0.0108  2016-12-12 10:53:34 PST
   - make Migration trait optional
